<resources>
    <string name="app_name">Upcoming Movies</string>
    <string name="login">Login</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="welcome_image_content_description">Welcome image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_movie_button">Add movie button</string>
    <string name="log_out">Log out</string>
    <string name="no_movies">Add the movies\nyou do not want to miss!</string>
    <string name="movie_poster">Movie poster</string>
    <string name="release_date">Release date</string>
    <string name="release_date_label">Release date:</string>
    <string name="watchlist">Watchlist</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="movie_details">Movie Details</string>
    <string name="overview">Overview</string>
    <string name="popularity">Popularity</string>
    <string name="popularity_label">Popularity:</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="movie_added">Movide added to watchlist!</string>
    <string name="getting_more_movies">Getting more movies…</string>
    <string name="releasing">It\'s releasing today!</string>
</resources>
