<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/watchlistFragment">

    <fragment
        android:id="@+id/watchlistFragment"
        android:name="com.guerrero.upcomingmovies.movies.watchlist.WatchlistFragment"
        android:label="@string/watchlist"
        tools:layout="@layout/fragment_watchlist">
        <action
            android:id="@+id/action_watchlistFragment_to_upcomingListFragment"
            app:destination="@id/upcomingListFragment" />
        <action
            android:id="@+id/action_watchlistFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/upcomingListFragment"
        android:name="com.guerrero.upcomingmovies.movies.upcominglist.UpcomingListFragment"
        android:label="@string/upcoming_movies"
        tools:layout="@layout/fragment_upcoming_list">
        <action
            android:id="@+id/action_upcomingListFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.guerrero.upcomingmovies.movies.details.MovieDetailsFragment"
        android:label="@string/movie_details">
        <argument
            android:name="movieId"
            app:argType="long" />
    </fragment>
</navigation>
